RESOLVED FIXED145630
REGRESSION (r184968): missing media player buttons (control bar exists, but no buttons)
https://bugs.webkit.org/show_bug.cgi?id=145630
Summary REGRESSION (r184968): missing media player buttons (control bar exists, but n...
Simon Fraser (smfr)
Reported 2015-06-03 20:48:57 PDT
REGRESSION (r184968): missing media player buttons (control bar exists, but no buttons)
Attachments
Patch (6.24 KB, patch)
2015-06-03 20:52 PDT, Simon Fraser (smfr)
zalan: review+
buildbot: commit-queue-
Archive of layout-test-results from ews100 for mac-mavericks (528.54 KB, application/zip)
2015-06-03 21:25 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-mavericks-wk2 (572.04 KB, application/zip)
2015-06-03 21:29 PDT, Build Bot
no flags
Simon Fraser (smfr)
Comment 1 2015-06-03 20:52:38 PDT
Simon Fraser (smfr)
Comment 2 2015-06-03 21:09:25 PDT
Build Bot
Comment 3 2015-06-03 21:25:13 PDT
Comment on attachment 254235 [details] Patch Attachment 254235 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5139120829497344 New failing tests: compositing/visible-rect/mask-layer-coverage.html
Build Bot
Comment 4 2015-06-03 21:25:15 PDT
Created attachment 254240 [details] Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 5 2015-06-03 21:29:26 PDT
Comment on attachment 254235 [details] Patch Attachment 254235 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6172644579737600 New failing tests: compositing/visible-rect/mask-layer-coverage.html
Build Bot
Comment 6 2015-06-03 21:29:28 PDT
Created attachment 254241 [details] Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Simon Fraser (smfr)
Comment 7 2015-06-03 21:45:10 PDT
EWS failed because this depends on bug 145629. https://trac.webkit.org/changeset/185187
Note You need to log in before you can comment on or make changes to this bug.